# smrf

./: .clang-format  .gitignore  CMakeLists.txt  NOTICE  README.md  pom.xml
compatibility-tests/: pom.xml  run-compatiblity-tests.sh
compatibility-tests/cpp/: CMakeLists.txt  Options.h  deserializer.cpp  serializer.cpp
compatibility-tests/java/: pom.xml
compatibility-tests/java/src/main/java/io/joynr/smrf/tests/: CliSerializerOptions.java  CompatibilityDeserializer.java  CompatibilitySerializer.java
compatibility-tests/java/src/main/java/io/smrf/tests/: CliSerializerOptions.java  CompatibilityDeserializer.java  CompatibilitySerializer.java
compatibility-tests/node/: deserializer.js  options.js  package.json  serializer.js
cpp/: CMakeLists.txt  NOTICE-CPP  smrfConfig.cmake
cpp/CMake/: AddClangFormat.cmake  AddExternalProject.cmake  AddGtestGmock.cmake  CheckBoostImportTargets.cmake  FindLibFuzzer.cmake
cpp/distribution/: smrf.spec
cpp/libsmrf/: CMakeLists.txt  MessageDeserializer.cpp  MessageDeserializerImpl.inl  MessagePrefix.h  MessageSerializer.cpp  MessageSerializerImpl.inl  compression.h  smrf.cpp
cpp/libsmrf/include/smrf/: ByteArrayView.h  ByteVector.h  Certificate.h  CertificateIdentifier.h  MessageDeserializer.h  MessageSerializer.h  PrivateKey.h  exceptions.h  smrf.h
cpp/tests/: CMakeLists.txt  RoundtripMessage.h  test-main.cpp
cpp/tests/libfuzzer-test/: CMakeLists.txt  entrypoint.cpp
cpp/tests/unit-test/: CMakeLists.txt  CompressionTest.cpp  MessageDeserializerTest.cpp  MessagePrefixTest.cpp  RoundtripTest.cpp
docker/: build-docker-images.sh  smrf-base.yml  smrf-compatibility.yml  smrf-cpp.yml  smrf-java.yml  smrf-libfuzzer.yml  smrf-node.yml  smrf.yml
docker/macros/: cpp.yml
docker/macros/cpp/: clang-from-llvm.yml  clang-from-source.yml  cpp-build-essentials.yml  flatbuffers-from-github.yml  gtest-gmock-from-github.yml  libfuzzer-from-source.yml
docker/resources/base/scripts/: boot2user.sh  global.sh  install-packages
java/: NOTICE-JAVA  pom.xml
java/java-formatter/: code-formatter-config.xml
java/smrf/: pom.xml
java/smrf-api/: pom.xml
java/smrf-api/src/main/java/io/joynr/smrf/: CertificateIdentifier.java  EncodingException.java  MessageDeserializer.java  MessageSerializer.java  UnsuppportedVersionException.java
java/smrf-api/src/main/java/io/smrf/: CertificateIdentifier.java  EncodingException.java  MessageDeserializer.java  MessageSerializer.java  UnsuppportedVersionException.java
java/smrf/src/main/java/io/joynr/smrf/: MessageDeserializerImpl.java  MessagePrefix.java  MessageSerializerImpl.java  ZlibCompression.java
java/smrf/src/main/java/io/smrf/: MessageDeserializerImpl.java  MessagePrefix.java  MessageSerializerImpl.java  ZlibCompression.java
java/smrf/src/test/java/io/joynr/smrf/: MessagePrefixTest.java  RoundtripTest.java
java/smrf/src/test/java/io/smrf/: MessagePrefixTest.java  RoundtripTest.java  TestMessage.java  ZlibCompressionTest.java
java/test-utils/: pom.xml
java/test-utils/src/main/java/io/joynr/smrf/tests/: TestMessage.java
java/test-utils/src/main/java/io/smrf/tests/: TestMessage.java
javascript/smrf-javascript/: NOTICE-JS  main.js  package.json
javascript/smrf-javascript/flatbuffers_generated/: smrf_generated.js
javascript/smrf-javascript/src/: MessagePrefix.js  MessageSerializer.js
javascript/smrf-native/: NOTICE-JS  README.md  binding.gyp  package.json
javascript/smrf-native/src/: ExternalString.h  Strings.h  marshalling.h
javascript/smrf-native/test/: benchmark.js  deserialize.test.js  serialize.test.js
javascript/test/: benchmark.js  deserialize.test.js  package.json  roundtrip.helper.js  roundtrip.test.js  serialize.test.js  testUtils.js
node/: NOTICE  NOTICE-JS  binding.gyp  gulpfile.js  main.js  package.json
node/src/: MessageDeserializerWrapper.h  Strings.h  marshalling.h  smrf.cpp  util.h
node/test/: message.helper.js  roundtrip.test.js  serialize.test.js
schema/: encryption.fbs  smrf.fbs
tools/release/: setVersion.sh
wiki/: Build.md  Distribution.md  ReleaseNotes.md
